# space-game-2022

./: .gitignore  .gitmodules  CMakeLists.txt
data/: ship1.blend  ship1.mtl
src/: main.cpp
